testsuite/tests/typecheck/should_fail/T17594g.stderr
T17594g.hs:6:5: error: [GHC-14964]
    • Illegal invisible type pattern: @a
      An invisible type pattern must be checked against a forall.
    • In an equation for ‘id'’: id' @a x = x

